[package]
name = "deep-equal"
version = "0.2.0"
edition = "2021"
description = "recursive deep equality comparison of arbitrary values"
license = "MIT"
repository = "https://github.com/hey-jj/deep-equal"
readme = "README.md"
keywords = ["deep-equal", "equality", "compare", "deepequal", "diff"]
categories = ["algorithms", "data-structures"]

[dependencies]
